--- a/tex/refs.bib
+++ b/tex/refs.bib
@@ -14,41 +14,6 @@
                  database of the ants of the world},
   shorttitle  = {{AntWeb}},
   url         = {https://hal-insu.archives-ouvertes.fr/insu-00805243},
-  abstract    = {Ants
-                 (Hymenoptera: Formicidae) are one of the great success stories
-                 in the history of life on Earth. From their first appearance in
-                 the Early Cretaceous, ants have come to occupy keystone
-                 positions in virtually all major terrestrial habitats, and they
-                 are absent only from Antarctica and a few inhospitable or
-                 remote islands. Despite the interest ants have long generated,
-                 our understanding of their taxonomy, diversity, evolution and
-                 ecology is far from complete. It is estimated that only half of
-                 the world's ant species - currently numbering about 12,200 -
-                 have been described. AntWeb's [www.antweb.org] mission is to
-                 develop tools to accelerate the discovery and documentation of
-                 ant diversity, and ensure ant information is widely accessible
-                 across a broad community. As such, AntWeb is the world's
-                 largest online database of images, specimen records, and
-                 natural history information on ants. A standardized digitizing
-                 protocol has been set up for extant species, which optimizes
-                 the image acquisition of each specimen in dorsal, profile, and
-                 head views, as well as the wings and male genitalia when
-                 applicable. As of July 2012, AntWeb has approximately 84000
-                 high quality images of 20000 specimens representing over 9010
-                 extant species. But the picture would be incomplete without the
-                 fossils. Recently the world catalogue of the fossil ants was
-                 added, which comprises 661 valid extinct species each
-                 represented by a single or few specimens disseminated in
-                 various fossil collections throughout the world. Besides the
-                 difficulty to access some of them, the main limitation to
-                 digitizing fossil ants is their mode of preservation. From
-                 spectacularly preserved specimens entombed within amber and
-                 showing the finest details of cuticular sculpturing, to the
-                 often shadowy outlines hinting at a structure that seems just
-                 out of view provided by an imprint, fossil ants often cannot be
-                 imaged following all the standards of extant specimens, and
-                 instead require specific methods for high quality image
-                 acquisition.},
   language    = {en},
   author      = {Perrichot,
                  Vincent and Fisher, Brian},
@@ -87,27 +52,10 @@
   month      = aug,
   note       = {ISSN: 1051-4651},
   pages      = {1530--1535},
-  abstract   = {This paper presents a novel, yet compact texture
-                descriptor for plant species identification based on bark
-                texture images. Termed Statistical Macro Binary Pattern (SMBP),
-                the descriptor is informative, rotation invariant, and it is
-                designed to encode texture information from a large support
-                area. The main novelty of this approach is the use of
-                statistical description to represent the intensity distribution
-                in the large support area, and an LBP-like encoding scheme to
-                derive a statistical macro pattern by thresholding it against
-                its adaptive statistical prototype. We propose to test three
-                neighborhood sampling schemes according to the angular
-                quantization at each level of the macrostructure. The
-                comprehensive experiments on three challenging bark datasets
-                (BarkTex, Trunk12, AFF) show that our descriptor achieves high
-                and more consistent identification rates when compared with
-                LBP-like texture descriptors.},
   doi        = {10.1109/ICPR.2018.8545798},
   keywords   = {Encoding, Prototypes,
-                Quantization
-                (signal), Histograms, Image coding, Feature extraction, Image
-                recognition},
+                Quantization (signal), Histograms, Image coding, Feature
+                extraction, Image recognition},
   shorttitle = {Plant identification from bark}
 }
 
@@ -123,49 +71,19 @@
 }
 
 @article{tihelka_evolution_2021,
-  title    = {The evolution of insect biodiversity},
-  journal  = {Current
-              Biology},
-  volume   = {31},
-  number   = {19},
-  pages    = {R1299-R1311},
-  year     = {2021},
-  issn     = {0960-9822},
-  doi      = {https://doi.org/10.1016/j.cub.2021.08.057},
-  url      = {https://www.sciencedirect.com/science/article/pii/S0960982221011933},
-  author   = {Erik Tihelka and Chenyang Cai and Mattia Giacomelli and Jesus
-              Lozano-Fernandez and Omar Rota-Stabelli and Diying Huang and Michael S. Engel
-              and Philip C.J. Donoghue and Davide Pisani},
-  abstract = {Summary
-              Insects comprise over half of all described animal species.
-              Together with the Protura (coneheads), Collembola (springtails)
-              and Diplura (two-pronged bristletails), insects form the Hexapoda,
-              a terrestrial arthropod lineage characterised by possessing six
-              legs. Exponential growth of genome-scale data for the hexapods has
-              substantially altered our understanding of the origin and
-              evolution of insect biodiversity. Phylogenomics has provided a new
-              framework for reconstructing insect evolutionary history,
-              resolving their position among the arthropods and some
-              long-standing internal controversies such as the placement of the
-              termites, twisted-winged insects, lice and fleas. However, despite
-              the greatly increased size of phylogenomic datasets, contentious
-              relationships among key insect clades remain unresolved. Further
-              advances in insect phylogeny cannot rely on increased depth and
-              breadth of genome and taxon sequencing. Improved modelling of the
-              substitution process is fundamental to countering
-              tree-reconstruction artefacts, while gene content, modelling of
-              duplications and deletions, and comparative morphology all provide
-              complementary lines of evidence to test hypotheses emerging from
-              the analysis of sequence data. Finally, the integration of
-              molecular and morphological data is key to the incorporation of
-              fossil species within insect phylogeny. The emerging integrated
-              framework of insect evolution will help explain the origins of
-              insect megadiversity in terms of the evolution of their body plan,
-              species diversity and ecology. Future studies of insect phylogeny
-              should build upon an experimental, hypothesis-driven approach
-              where the robustness of hypotheses generated is tested against
-              increasingly realistic evolutionary models as well as
-              complementary sources of phylogenetic evidence.}
+  title   = {The evolution of insect biodiversity},
+  journal = {Current
+             Biology},
+  volume  = {31},
+  number  = {19},
+  pages   = {R1299-R1311},
+  year    = {2021},
+  issn    = {0960-9822},
+  doi     = {https://doi.org/10.1016/j.cub.2021.08.057},
+  url     = {https://www.sciencedirect.com/science/article/pii/S0960982221011933},
+  author  = {Erik Tihelka and Chenyang Cai and Mattia Giacomelli and Jesus
+             Lozano-Fernandez and Omar Rota-Stabelli and Diying Huang and
+             Michael S. Engel and Philip C.J. Donoghue and Davide Pisani}
 }
 
 @book{gullan_insects_2009,
@@ -176,17 +94,6 @@
   address    = {Hoboken},
   isbn       = {9781405144575},
   note       = {OCLC: 1048427241},
-  abstract   = {TO ACCESS THE ARTWORK FROM THE BOOK, PLEASE VISIT
-                www.blackwellpublishing.com/gullan . This established and
-                popular textbook is the definitive guide to the study of
-                insects; a group of animals that represent over half of the
-                planet's biological diversity.
-                {\textless}li{\textgreater}Completely updated and expanded, this
-                new edition examines all aspects of insect biology including
-                anatomy and physiology, ecology and evolution of insects, insect
-                behaviours such as sociality, predation, parasitism and defense,
-                medical and veterinary entomology and methods of collection,
-                preserving and id.},
   language   = {English},
   shorttitle = {Insects},
   url        = {http://qut.eblib.com.au/patron/FullRecord.aspx?p=233169}
@@ -199,9 +106,6 @@
   isbn       = {9780465024452},
   shorttitle = {Bugs {In}
                 {The} {System}},
-  abstract   = {An introduction to insect physiology, genetics
-                and behaviour which looks at the interaction between humans and insects, and
-                explores both the positive and negative aspects of the relationship.},
   language   = {en},
   publisher  = {Basic Books},
   author     = {Berenbaum, May},
@@ -216,26 +120,18 @@
   title     = {Performance effect analysis for insect classification using
                convolutional neural network},
   doi       = {10.1109/ICCSCE.2017.8284406},
-  abstract  = {It is necessary to develop an automated insect classification method in
-               order to create high added value of insects. Recently, image classification
-               work applying deep learning shows the best result of classification
-               performance. In this paper, we use convolutional neural network to classify
-               insects and examine the effect of the classification performance with the
-               varying number of kernels in the convolution layer and with the different
-               image datasets. Experiments were conducted on 27 insect classes of ImageNet
-               dataset with AlexNet. We confirmed that the classification performance of
-               neural network improves where insects are well represented at the center of
-               the image, and when the number of convolution kernels increases.},
-  booktitle = {2017 7th {IEEE} {International} {Conference} on {Control} {System},
+  booktitle = {2017 7th {IEEE}
+               {International} {Conference} on {Control} {System},
                {Computing} and {Engineering} ({ICCSCE})},
   author    = {Lim, Suchang and Kim,
                Seunghyun and Kim, Doyeon},
   month     = nov,
   year      = {2017},
   keywords  = {Insects,
-               Feature extraction, Convolution, Kernel, Data mining, Convolutional neural
-               networks, Insect classification, Convolutional neural network, Convolution
-               layer, Convolution kernel},
+               Feature extraction, Convolution, Kernel, Data mining,
+               Convolutional neural networks, Insect classification,
+               Convolutional neural network, Convolution layer, Convolution
+               kernel},
   pages     = {210--215}
 }
 
@@ -243,25 +139,6 @@
   title      = {{ImageNet}: {A} large-scale hierarchical image database},
   shorttitle = {{ImageNet}},
   doi        = {10.1109/CVPR.2009.5206848},
-  abstract   = {The explosion of image data on the Internet has the potential to foster
-                more sophisticated and robust models and algorithms to index, retrieve,
-                organize and interact with images and multimedia data. But exactly how such
-                data can be harnessed and organized remains a critical problem. We introduce
-                here a new database called “ImageNet”, a large-scale ontology of images built
-                upon the backbone of the WordNet structure. ImageNet aims to populate the
-                majority of the 80,000 synsets of WordNet with an average of 500–1000 clean
-                and full resolution images. This will result in tens of millions of annotated
-                images organized by the semantic hierarchy of WordNet. This paper offers a
-                detailed analysis of ImageNet in its current state: 12 subtrees with 5247
-                synsets and 3.2 million images in total. We show that ImageNet is much larger
-                in scale and diversity and much more accurate than the current image datasets.
-                Constructing such a large-scale database is a challenging task. We describe
-                the data collection scheme with Amazon Mechanical Turk. Lastly, we illustrate
-                the usefulness of ImageNet through three simple applications in object
-                recognition, image classification and automatic object clustering. We hope
-                that the scale, accuracy, diversity and hierarchical structure of ImageNet can
-                offer unparalleled opportunities to researchers in the computer vision
-                community and beyond.},
   booktitle  = {2009 {IEEE} {Conference} on {Computer}
                 {Vision} and {Pattern} {Recognition}},
   author     = {Deng, Jia and Dong, Wei
@@ -269,9 +146,10 @@
   month      = jun,
   year       = {2009},
   note       = {ISSN: 1063-6919},
-  keywords   = {Large-scale systems, Image databases, Explosions, Internet, Robustness,
-                Information retrieval, Image retrieval, Multimedia databases, Ontologies,
-                Spine},
+  keywords   = {Large-scale systems, Image databases, Explosions, Internet,
+                Robustness,
+                Information retrieval, Image retrieval, Multimedia databases,
+                Ontologies, Spine},
   pages      = {248--255}
 }
 
@@ -284,28 +162,298 @@
   author     = {Carlos Guestrin and Emily Fox}
 }
 
-
 @misc{glick_insect_2016,
   title    = {Insect {Classification} {With} {Heirarchical} {Deep}
-              {Convolutional} {Neural} {Networks} {Convolutional} {Neural} {Networks} for
-              {Visual} {Recognition} ( {CS} 231 {N} )},
+              {Convolutional} {Neural} {Networks} {Convolutional} {Neural}
+              {Networks} for {Visual} {Recognition} ( {CS} 231 {N} )},
   url      = {https://www.semanticscholar.org/paper/Insect-Classification-With-Heirarchical-Deep-Neural-Glick-Miller/bb8316bb841bf6667431bf755f6fe01ec013b8d5},
-  abstract = {Inspired by the success of recent work on HD-CNNs, the pipeline
-              for designing, training and testing a hierarchical architecture achieves
-              promising results considering the particularly messy nature of the data set.
-              Classification of insect species is is a particularly difficult challenge
-              because of the high degree of similarity of the appearance between distinct
-              species. Given the visual commonalities across different levels of taxonomic
-              hierarchies (i.e. class, order, family, etc.), insect classifcation provides
-              a unique opportunity to apply emerging techniques used in Hierarchical Deep
-              CNNs (HD-CNNs). Inspired by the success of recent work on HD-CNNs, our
-              pipeline for designing, training and testing a hierarchical architecture
-              achieves promising results considering the particularly messy nature of our
-              data set. Working with 217,657 insect images from 277 unique classes, we
-              achieved a top-5 misclassification rate of 22.54\% and a top-10
-              misclassification rate of},
   language = {en},
-  urldate  = {2022-04-26},
   author   = {Glick, Jeffrey A. and Miller, K.},
   year     = {2016}
+}
+
+@article{thenmozhi_crop_2019,
+  title    = {Crop pest classification based on deep convolutional neural
+              network and transfer learning},
+  volume   = {164},
+  issn     = {0168-1699},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0168169919310695},
+  doi      = {10.1016/j.compag.2019.104906},
+  language = {en},
+  journal  = {Computers and Electronics in Agriculture},
+  author   = {Thenmozhi,
+              K. and Srinivasulu Reddy, U.},
+  month    = sep,
+  year     = {2019},
+  keywords = {Insect classification, Field crops, Convolutional neural
+              network, Deep learning, Transfer learning},
+  pages    = {104906}
+}
+
+@article{kaloudis_insect_2005,
+  title    = {Insect identification expert system for forest protection},
+  volume   = {28},
+  issn     = {0957-4174},
+  url      = {https://www.sciencedirect.com/science/article/pii/S0957417404001496},
+  doi      = {10.1016/j.eswa.2004.12.005},
+  language = {en},
+  number   = {3},
+  journal  = {Expert Systems with Applications},
+  author   = {Kaloudis, S. and
+              Anastopoulos, D. and Yialouris, C. P. and Lorentzos, N. A. and
+              Sideridis, A. B.},
+  month    = apr,
+  year     = {2005},
+  keywords = {Forest pest management,
+              Diagnostic expert systems, Decision support system},
+  pages    = {445--452}
+}
+
+@article{xia_insect_2018,
+  title   = {Insect {Detection} and {Classification} {Based} on an {Improved}
+             {Convolutional} {Neural} {Network}},
+  volume  = {18},
+  issn    = {1424-8220},
+  url     = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC6308804/},
+  doi     = {10.3390/s18124169},
+  number  = {12},
+  journal = {Sensors
+             (Basel, Switzerland)},
+  author  = {Xia, Denan and Chen, Peng and Wang, Bing
+             and Zhang, Jun and Xie, Chengjun},
+  month   = nov,
+  year    = {2018},
+  pmid    = {30486481},
+  pmcid   = {PMC6308804},
+  pages   = {4169}
+}
+
+@inproceedings{feng_automated_2013,
+  title     = {Automated identification and retrieval of moth images with
+               semantically related visual attributes on the wings},
+  doi       = {10.1109/ICIP.2013.6738531},
+  booktitle = {2013
+               {IEEE} {International} {Conference} on {Image} {Processing}},
+  author    = {Feng, Linan and Bhanu, Bir},
+  month     = sep,
+  year      = {2013},
+  note      = {ISSN:
+               2381-8549},
+  keywords  = {Entomological image identification and retrieval,
+               semantically-related visual attribtues, attribute cooccurrence pattern
+               detection},
+  pages     = {2577--2581}
+}
+
+@article{gotlieb_texture_1990,
+  title    = {Texture descriptors based on co-occurrence matrices},
+  volume   = {51},
+  issn     = {0734189X},
+  url      = {https://linkinghub.elsevier.com/retrieve/pii/S0734189X05800635},
+  doi      = {10.1016/S0734-189X(05)80063-5},
+  language = {en},
+  number   = {1},
+  journal  = {Computer Vision, Graphics, and Image Processing},
+  author   = {Gotlieb, Calvin C. and Kreyszig, Herbert E.},
+  month    = jul,
+  year     = {1990},
+  pages    = {70--86}
+}
+
+@article{lowe_distinctive_2004,
+  title    = {Distinctive {Image} {Features} from {Scale}-{Invariant}
+              {Keypoints}},
+  volume   = {60},
+  issn     = {0920-5691},
+  url      = {http://link.springer.com/10.1023/B:VISI.0000029664.99615.94},
+  doi      = {10.1023/B:VISI.0000029664.99615.94},
+  language = {en},
+  number   = {2},
+  journal  = {International Journal of Computer Vision},
+  author   = {Lowe, David G.},
+  month    = nov,
+  year     = {2004},
+  pages    = {91--110}
+}
+
+@article{hassan_advances_2014,
+  title   = {Advances in {Automatic} {Insect} {Classification}},
+  volume  = {3},
+  issn    = {22005846},
+  url     = {http://www.wireilla.com/engg/eeeij/papers/3214elelij04.pdf},
+  doi     = {10.14810/elelij.2014.3204},
+  number  = {2},
+  journal = {Electrical and Electronics Engineering: An International Journal},
+  author  = {Hassan, Siti N. A and Rahman, Nadiah S. A and Htike, Zaw Zaw and Win, Shoon
+             Le},
+  month   = may,
+  year    = {2014},
+  pages   = {51--63}
+}
+
+@article{sosiak_multidimensional_2021,
+  title    = {Multidimensional trait morphology predicts ecology across ant
+              lineages},
+  volume   = {35},
+  issn     = {0269-8463, 1365-2435},
+  url      = {https://onlinelibrary.wiley.com/doi/10.1111/1365-2435.13697},
+  doi      = {10.1111/1365-2435.13697},
+  language = {en},
+  number   = {1},
+  journal  = {Functional Ecology},
+  author   = {Sosiak, Christine E.
+              and Barden, Phillip},
+  editor   = {Higham, Timothy},
+  month    = jan,
+  year     = {2021},
+  pages    = {139--152}
+}
+
+
+@article{cao_online_2020,
+  title      = {Online tracking of ants based on deep association metrics: method,
+                dataset and evaluation},
+  volume     = {103},
+  issn       = {00313203},
+  shorttitle = {Online tracking of ants based on deep association metrics},
+  url        = {https://linkinghub.elsevier.com/retrieve/pii/S003132032030039X},
+  doi        = {10.1016/j.patcog.2020.107233},
+  language   = {en},
+  journal    = {Pattern Recognition},
+  author     = {Cao, Xiaoyan and Guo, Shihui and
+                Lin, Juncong and Zhang, Wenshu and Liao, Minghong},
+  month      = jul,
+  year       = {2020},
+  pages      = {107233}
+}
+
+@article{gal_antrax_2020,
+  title    = {{anTraX}, a software package for high-throughput video tracking of
+              color-tagged insects},
+  volume   = {9},
+  issn     = {2050-084X},
+  doi      = {10.7554/eLife.58145},
+  language = {eng},
+  journal  = {eLife},
+  author   = {Gal, Asaf and Saragosti, Jonathan and
+              Kronauer, Daniel Jc},
+  month    = nov,
+  year     = {2020},
+  pmid     = {33211008},
+  pmcid    = {PMC7676868},
+  keywords = {Algorithms, Animals, Behavior, Animal, Image
+              Processing, Computer-Assisted, Insecta, Software, Video Recording, ants,
+              collective behavior, ethology, formicidae, machine learning, machine vision,
+              neuroscience, social behavior, social insects, tracking},
+  pages    = {e58145}
+}
+
+@techreport{sclocco_integrating_2020,
+  title       = {Integrating real-time data analysis into automatic tracking of
+                 social insect behavior},
+  copyright   = {© 2020, Posted by Cold Spring Harbor
+                 Laboratory. This pre-print is available under a Creative Commons License
+                 (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as
+                 described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+  url         = {https://www.biorxiv.org/content/10.1101/2020.11.03.366195v1},
+  language    = {en},
+  institution = {bioRxiv},
+  author      = {Sclocco, Alessio and Ong,
+                 Shirlyn Jia Yun and Aung, Sai Yan Pyay and Teseo, Serafino},
+  month       = nov,
+  year        = {2020},
+  note        = {Type: article},
+  pages       = {2020.11.03.366195}
+}
+
+@article{chandra_foraging_2021,
+  title    = {Foraging and feeding are independently regulated by social and
+              personal hunger in the clonal raider ant},
+  volume   = {75},
+  issn     = {1432-0762},
+  url      = {https://doi.org/10.1007/s00265-021-02985-7},
+  doi      = {10.1007/s00265-021-02985-7},
+  language = {en},
+  number   = {2},
+  journal  = {Behavioral Ecology and Sociobiology},
+  author   = {Chandra, Vikram and
+              Kronauer, Daniel J. C.},
+  month    = jan,
+  year     = {2021},
+  pages    = {41}
+}
+
+@article{fetter_oxytocin_2021,
+  title    = {An oxytocin/vasopressin-related neuropeptide modulates social
+              foraging behavior in the clonal raider ant},
+  volume   = {19},
+  issn     = {1545-7885},
+  url      = {https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3001305},
+  doi      = {10.1371/journal.pbio.3001305},
+  language = {en},
+  number   = {6},
+  journal  = {PLOS Biology},
+  author   = {Fetter-Pruneda, Ingrid and Hart, Taylor
+              and Ulrich, Yuko and Gal, Asaf and Oxley, Peter R. and Olivos-Cisneros,
+              Leonora and Ebert, Margaret S. and Kazmi, Manija A. and Garrison, Jennifer L.
+              and Bargmann, Cornelia I. and Kronauer, Daniel J. C.},
+  month    = jun,
+  year     = {2021},
+  keywords = {Ants, Animal sociality, Larvae, Behavior, Foraging,
+              Social systems, Animal behavior, Pupae},
+  pages    = {e3001305}
+}
+
+@article{liu_pestnet_2019,
+  title      = {{PestNet}: {An} {End}-to-{End} {Deep} {Learning} {Approach} for
+                {Large}-{Scale} {Multi}-{Class} {Pest} {Detection} and {Classification}},
+  volume     = {7},
+  issn       = {2169-3536},
+  shorttitle = {{PestNet}},
+  doi        = {10.1109/ACCESS.2019.2909522},
+  journal    = {IEEE Access},
+  author     = {Liu, Liu and Wang, Rujing and Xie, Chengjun and Yang, Po and Wang, Fangyuan
+                and Sudirman, Sud and Liu, Wancai},
+  year       = {2019},
+  keywords   = {Feature
+                extraction, Proposals, Insects, Training, Deep learning, Task analysis,
+                Computer architecture, Channel-spatial attention, convolutional neural
+                network, multi-class pest detection, position-sensitive score map, region
+                proposal network},
+  pages      = {45301--45312}
+}
+
+@article{kasinathan_machine_2021,
+  title    = {Machine learning ensemble with image processing for pest
+              identification and classification in field crops},
+  volume   = {33},
+  issn     = {1433-3058},
+  url      = {https://doi.org/10.1007/s00521-020-05497-z},
+  doi      = {10.1007/s00521-020-05497-z},
+  language = {en},
+  number   = {13},
+  journal  = {Neural Computing and Applications},
+  author   = {Kasinathan, Thenmozhi and
+              Uyyala, Srinivasulu Reddy},
+  month    = jul,
+  year     = {2021},
+  pages    = {7491--7504}
+}
+
+@inproceedings{urteaga_scorpions_2016,
+  title      = {Scorpions: {Classification} of poisonous species using shape
+                features},
+  shorttitle = {Scorpions},
+  doi        = {10.1109/CONIELECOMP.2016.7438563},
+  booktitle  = {2016 {International}
+                {Conference} on {Electronics}, {Communications} and {Computers}
+                ({CONIELECOMP})},
+  author     = {Urteaga-Reyesvera, J. Carlos and
+                Possani-Espinosa, Andre},
+  month      = feb,
+  year       = {2016},
+  keywords   = {Artificial neural networks, Insects, Shape, Support vector machines, Feature
+                extraction, Vegetation, Scorpions, species classification, shape feature,
+                random forest},
+  pages      = {125--129}
 }
